@@ -13,6 +13,7 @@
 - Fixed certain branches not showing up on branches select lists
 - Fixed submitting notification settings when "Maximum minutes ..." was not set
 - Fixed bookmark addition error
+- Disabled periodic updater during restore
 
 === Version 3.6.3 build 7455 ===
 - Fixed error in course completion page
